kube/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
      tier: api-gateway
  template:
    metadata:
      labels:
        app: api
        tier: api-gateway
    spec:
      containers:
        - name: api
          image: scottcollins/fibonacci-api
          # resources:
          #   limits:
          #     cpu: 75m
          #     memory: 100Mi
          ports:
            - name: api-port
              containerPort: 5000
