kube/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:4.0-alpine
          # resources:
          #   limits:
          #     cpu: 100m
          #     memory: 100Mi
          ports:
            - name: redis-port
              containerPort: 6379
