kube/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: worker
  template:
    metadata:
      labels: 
        app: worker
    spec:
      containers:
        - name: worker
          image: scottcollins/fibonacci-worker
          # resources:
          #   limits:
          #     cpu: 100m
          #     memory: 100Mi
