kube/api-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: api
spec:
  type: ClusterIP
  ports:
    - name: api-port
      port: 5000
      targetPort: 5000
  selector:
    app: api
