kube/client-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client  
spec:
  type: ClusterIP
  ports:
    - name: client-service-port
      port: 3000
      targetPort: 3000
  selector:
    app: client
