kube/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - name: postgres-port
      port: 5432
      targetPort: 5432
