kube/nginx-ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/rewrite-target: /    
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: client
              servicePort: 3000
          - path: /api/
            backend:
              serviceName: api
              servicePort: 5000
